# movie_crawler

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/scripts/: update_dev_version.py  update_main_version.py
.github/workflows/: create-release.yml
docs/: release-workflow.md
movie_crawler/: __init__.py  __main__.py
movie_crawler/checker/: movie_checker.py
movie_crawler/config/: __init__.py  files.py  network.py  paths.py  scraper.py  services.py
movie_crawler/downloader/: aria2.py
movie_crawler/renamer/: __init__.py  movie_renamer.py
movie_crawler/scraper/: movie_scraper.py
movie_crawler/utils/: common.py  database.py
